// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarNav when window width is above mobileBreakpoint should render default 1`] = `
.c1 {
  display: list-item;
  padding: 9px 15px;
}

.c2 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
}

.c2::after {
  content: "";
  display: block;
  height: 3px;
  background: #CCC6B8;
  margin-top: 0.25em;
  width: 0;
}

.c2:hover {
  color: #CCC6B8;
}

.c2:hover::after {
  width: 100%;
}

.c3 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #CCC6B8;
  cursor: pointer;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
}

.c3::after {
  content: "";
  display: block;
  height: 3px;
  background: #CCC6B8;
  margin-top: 0.25em;
  width: 100%;
}

.c3:hover {
  color: #CCC6B8;
}

.c3:hover::after {
  width: 100%;
}

.c4 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #FFFFFF;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
}

.c4::after {
  content: "";
  display: block;
  height: 3px;
  background: #CCC6B8;
  margin-top: 0.25em;
  width: 0;
}

.c4:hover {
  color: #FFFFFF;
}

.c4:hover::after {
  width: 0;
}

.c0 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: flex;
  padding: 0;
  width: auto;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <button
      class="c2"
    >
      Link
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      class="c3"
    >
      Active Link
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      class="c4"
      disabled=""
    >
      Link
    </button>
  </li>
</ul>
`;

exports[`NavbarNav when window width is below mobileBreakpoint styles should render brown mobile navbar nav by default 1`] = `
.c4 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c5 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c5:hover {
  color: #CCC6B8;
}

.c6 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #CCC6B8;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c6:hover {
  color: #CCC6B8;
}

.c7 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #FFFFFF;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c7:hover {
  color: #FFFFFF;
}

.c3 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c1 {
  will-change: height;
  display: none;
  height: 0;
  overflow: hidden;
  transition: height 250ms cubic-bezier(0.4,0,0.2,1);
}

.c0 {
  box-shadow: 0 5px 10px 0 #00000026;
  left: 0;
  position: absolute;
  top: 75px;
  width: 100%;
  background-color: #4E3629;
}

.c2 {
  padding: 0 7vw 1rem;
}

@media (min-width:740px) {
  .c2 {
    padding: 0 33px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    display="none"
    height="0"
    id="navbar-nav-mobile-collapse"
    overflow="hidden"
    transition="height 250ms cubic-bezier(0.4,0,0.2,1)"
  >
    <div
      class="c2"
    >
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          <button
            class="c5"
          >
            Link
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c6"
          >
            Active Link
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c7"
            disabled=""
          >
            Link
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NavbarNav when window width is below mobileBreakpoint styles should render white mobile navbar nav when color variant is provided 1`] = `
.c4 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c5 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #C00404;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c5:hover {
  color: #000000;
}

.c6 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #000000;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c6:hover {
  color: #000000;
}

.c7 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  text-decoration: none!important;
  color: #C00404;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 0.65;
  pointer-events: auto;
  transition: all .2s ease-in-out;
}

.c7:hover {
  color: #C00404;
}

.c3 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c1 {
  will-change: height;
  display: none;
  height: 0;
  overflow: hidden;
  transition: height 250ms cubic-bezier(0.4,0,0.2,1);
}

.c0 {
  box-shadow: 0 5px 10px 0 #00000026;
  left: 0;
  position: absolute;
  top: 75px;
  width: 100%;
  background-color: #FFFFFF;
}

.c2 {
  padding: 0 7vw 1rem;
}

@media (min-width:740px) {
  .c2 {
    padding: 0 33px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    display="none"
    height="0"
    id="navbar-nav-mobile-collapse"
    overflow="hidden"
    transition="height 250ms cubic-bezier(0.4,0,0.2,1)"
  >
    <div
      class="c2"
    >
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          <button
            class="c5"
          >
            Link
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c6"
          >
            Active Link
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c7"
            disabled=""
          >
            Link
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
